# surrogate-models

./: .env.example  .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  surrogate_models.toml.example
.claude/rules/: architecture.md  bounded-context.md  configuration.md  data-layout.md  docs.md  docstrings.md  makefile.md  state-file.md  tdd.md
.claude/skills/characterize-and-prioritize/: SKILL.md
.claude/skills/refactor-complex-legacy/: SKILL.md
.claude/skills/sample-trace-data/: SKILL.md
notebooks/: .gitattributes  a.ipynb
notebooks/neutron-stars/: ns_explore-data.ipynb  ns_mlmodels-checkpoint-resume.ipynb  ns_mlmodels-e2e.ipynb  ns_mlmodels-live-feedback.ipynb  ns_mlmodels-split-train-val.ipynb
scripts/utils/: verify_neutron_stars_constants.py
src/surrogate_models/: __init__.py  __main__.py  a.py  config.py
src/surrogate_models/datasets/: __init__.py  __main__.py  application.py  domain.py  infrastructure.py
src/surrogate_models/mlmodels/: __init__.py  __main__.py  application.py  domain.py  infrastructure.py
src/surrogate_models/railway_adts/: __init__.py  error.py  option.py  result.py  safe.py
tests/: test_config.py  test_smoke.py
tests/datasets/: test_application.py  test_domain.py  test_infrastructure.py  test_main.py
tests/mlmodels/: __init__.py  test_application.py  test_domain.py  test_e2e.py  test_infrastructure.py  test_main.py
tests/railway_adts/: test_error.py  test_option.py  test_result.py  test_safe.py
