[project]
name = "regression-surrogate-pde-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.5"
dependencies = []

[dependency-groups]
lab = [
    "jupyter-lsp>=2.3.1",
    "jupyterlab>=4.6.0",
    "jupyterlab-lsp>=5.3.0",
    "jupyterlab-vim>=4.1.4",
    "nbstripout>=0.9.1",
    "python-lsp-ruff>=2.3.1",
    "python-lsp-server[all]>=1.14.0",
]
